tests/baselines/reference/iteratorSpreadInCall4.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts(15,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts (1 errors) ====
    function foo(s1: symbol, ...s: symbol[]) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.